--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 
 html {
   font-size: 16px;
-
+  font-family: 'Slabo 27px', serif;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
@@ -29,6 +29,7 @@ html {
 .App-intro {
   font-size: large;
 }
+
 #root{
   width: 960px;
   margin: 0 auto;
@@ -62,12 +63,21 @@ small {
   bottom: 0;
   margin-bottom: -15px;
 }
-.result-container h1 h2 h3{
-  font-family: 'Raleway', sans-serif;
+
+
+h1 h2 h3 h4 h5{
+  font-family: 'Raleway', sans-serif !important;
+  text-align: left;
+  margin: 0px;
+  padding: 0;
 }
 
 .result-container h3{
   margin-bottom: 20px;
+}
+
+.App{
+    font-family: 'Slabo 27px', serif;
 }
 
 #result-summary{
